--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -1,3 +1,10 @@
+- name: gnome | appearance | dark theme
+  tags: gnome,theme
+  become_user: aelzagh
+  dconf:
+    key: "org/gnome/desktop/interface/color-scheme"
+    value: "'prefer-dark'"
+
 - name: gnome | appearance | copy wallpaper file(fedora)
   tags: gnome,gnome-wallpaper
   copy:
@@ -23,15 +30,15 @@
   tags: gnome,gnome-wallpaper
   become_user: aelzagh
   dconf:
-    key: "/org/gnome/desktop/background/picture-uri"
-    value: "'file:///usr/share/backgrounds/fedora-wallpaper.png'"
+    key: "/org/gnome/desktop/background/picture-uri-dark"
+    value: "'file:///usr/share/backgrounds/joy-inksplat-theme/wallpaper/fedora-wallpaper.png'"
   when: ansible_distribution == "Fedora"
 
 - name: gnome | appearance | set wallpaper(debian)
   tags: gnome,gnome-wallpaper
   become_user: aelzagh
   dconf:
-    key: "/org/gnome/desktop/background/picture-uri"
+    key: "/org/gnome/desktop/background/picture-uri-dark"
     value: "'file:///usr/share/backgrounds/joy-inksplat-theme/wallpaper/gnome-background.xml'"
   when: ansible_distribution in ["Debian", "Ubuntu", "Pop!_OS"]
 
