--- a/tasks/desktop.yml
+++ b/tasks/desktop.yml
@@ -24,7 +24,7 @@
     owner: root
     group: root
     mode: 0644
-  when: ansible_distribution in ["Debian", "Ubuntu", "Pop!_OS"]
+  when: ansible_os_family == "Debian"
 
 - name: gnome | appearance | set wallpaper(fedora)
   tags: gnome,gnome-wallpaper
@@ -40,7 +40,7 @@
   dconf:
     key: "/org/gnome/desktop/background/picture-uri-dark"
     value: "'file:///usr/share/backgrounds/joy-inksplat-theme/wallpaper/gnome-background.xml'"
-  when: ansible_distribution in ["Debian", "Ubuntu", "Pop!_OS"]
+  when: ansible_os_family == "Debian"
 
 - name: gnome | appearance | set wallpaper position
   tags: gnome,gnome-wallpaper
